--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
 
   <body>
     <!-- navigation code here -->
+    <nav>
+      <h1>Space Walkers</h1>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign In</a>
+    </nav>
 
     <div class="container home">
       <header class="intro">
         <!-- image code here -->
-
+        <img src="img/main-header.png" alt="Image of Earth from Space" />
         <h2>Lift Off</h2>
 
         <p>
