completed navigation stytles

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
   <body>
     <!-- navigation code here -->
     <nav>
-      <h1>Space Walkers</h1>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-      <a href="#">Sign In</a>
+      <div class="container">
+        <h1>Space Walkers</h1>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
+      </div>
     </nav>
 
     <div class="container home">
